[package]
name = "SupremeMonitor"
version = "0.1.0"
authors = ["xvi <jrip03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full", "macros"] }

hyper = "0.13"
hyper-tls = "0.4"
pretty_env_logger = "0.4"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
